# tabroom-python

./: .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
examples/: access_control.py  basic_usage.py  caselist_nsda.py  error_handling.py  tournament_management.py
src/tabroom/: __init__.py  auth.py  exceptions.py  types.py
src/tabroom/models/: __init__.py  caselist.py  school.py  tournament.py  user.py
src/tabroom/resources/: __init__.py  caselist.py  extra.py  system.py
tabroom/: __init__.py  auth.py  client.py
tabroom/models/: auth.py  common.py  share.py  tournament.py  user.py
tabroom/resources/: __init__.py  access.py  extra.py  nsda.py  payment.py  public.py  share.py  tab.py  user.py
tests/: __init__.py  test_client.py  test_models.py
