[project]
name = "tabroom-python"
version = "0.1.0"
description = "Python API client for Tabroom.com"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
